fix cut off continue button

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -187,7 +187,7 @@
 }
 .questionnaire-preview .closing-section {
 	position: absolute;
-	bottom: 1em;
+	bottom: 100px;
 	left: 0;
 }
 .questionnaire-preview .continue-button-container {
