--- a/client/src/components/pages/QuestionnairePreview/QuestionnairePreview.scss
+++ b/client/src/components/pages/QuestionnairePreview/QuestionnairePreview.scss
@@ -11,7 +11,7 @@
 
 	.closing-section {
 		position: absolute;
-		bottom: 1em;
+		bottom: 100px;
 		left: 0;
 	}
 
